--- a/css/saccol.css
+++ b/css/saccol.css
@@ -14,6 +14,14 @@ body {
     src: url("../fonts/bevan.ttf"); /* TTF file for CSS3 browsers */
 }
 
+h1 {
+  color: #000000;
+}
+
+.black-to-white {
+  color: #000000;
+}
+
 /* ==== Links ==== */
 a {
 	color: #7F140F;
@@ -45,13 +53,8 @@ a:focus {
 	font-size: 2em;
 	font-family: "bevan";
   color: #FFFFFF;
-	text-shadow: 2px 2px #000000;
 	letter-spacing: 2px;
 	word-spacing: 0.5em;
-}
-
-.telefone {
-	text-shadow: 2px 2px #000000;
 }
 
 /* ==== Navegação ==== */
@@ -62,15 +65,11 @@ nav li {
 	font-size: 1.4em;
 	font-weight: 200;
 	margin-top: .5em;
-	margin-bottom: 1em;
 	letter-spacing: 1px;
 }
 
 nav li a{
-	text-decoration: none;
-	text-shadow: 1px 1px rgb(53,37,4);
 	font-weight: 500;
-	color: rgb(255,220,104);
 }
 
 /* ==== Introdução ==== */
@@ -86,9 +85,7 @@ nav li a{
 /*  ==== Cardápio ==== */    
 
 #cardapio {
-  padding-top: 1em;
   padding-bottom: .5em;
-  text-shadow: 2px 2px #000000;
 }
 
 .price {
@@ -148,12 +145,6 @@ nav li a{
 opacity: 1;	
 }
 
-/*  ==== Horário ==== */    
-
-.horario {
-    text-shadow: 2px 2px #000000;
-}
-
 /*  ==== Cartões ==== */
 
 .xis {
@@ -195,8 +186,33 @@ opacity: 1;
 
 
 /*  ==== Media Query ==== */ 
-@media (min-width: 992px) {
+@media (min-width: 1200px) {
+  
   body {
     background: rgb(255,220,104) url("../images/cerveja.jpg") top center fixed;
+  }
+
+  nav li {
+      margin-bottom: 1em;
+  }
+
+  nav li a{
+    text-decoration: none;
+    text-shadow: 1px 1px rgb(53,37,4);
+    font-weight: 500;
+    color: rgb(255,220,104);
+  }
+
+  #cardapio {
+    padding-top: 1em;
+  }
+
+  .drop-shadow {
+    color: #FFFFFF;
+    text-shadow: 2px 2px #000000;
+  }
+
+  .black-to-white {
+    color: #FFFFFF;
   }
 }
