--- a/css/saccol.css
+++ b/css/saccol.css
@@ -2,7 +2,7 @@ body {
 	background-color: rgb(167,50,28);
 	color: #FFFFFF;
 	font-family: sans-serif;
-  background: rgb(255,220,104) url("../images/cerveja.jpg") top center no-repeat;
+  background: #7F140F url("../images/cerveja.jpg") top center no-repeat;
 }
 
 @font-face { 
@@ -14,18 +14,14 @@ body {
     src: url("../fonts/bevan.ttf"); /* TTF file for CSS3 browsers */
 }
 
-h1 {
-  color: #000000;
-}
-
-.black-to-white {
-  color: #000000;
+.white {
+  color: white;
 }
 
 /* ==== Links ==== */
 a {
-	color: #7F140F;
-  text-shadow: #FFFFFF;
+	color: #FFFFFF;
+  text-shadow: #000000;
 	font-weight: 500;
 	text-decoration: underline;
 }
@@ -146,7 +142,6 @@ opacity: 1;
 }
 
 /*  ==== Cartões ==== */
-
 .xis {
     background-color: white;
     padding-top: 1em;
@@ -155,7 +150,6 @@ opacity: 1;
 }
 
 /*  ==== Localização ==== */    
-
 .lanches {
   background-color: rgb(255,220,104);
   background-image: url('../images/yellow-paper-texture-min.jpg');
@@ -212,7 +206,4 @@ opacity: 1;
     text-shadow: 2px 2px #000000;
   }
 
-  .black-to-white {
-    color: #FFFFFF;
-  }
 }
