--- a/css/saccol.css
+++ b/css/saccol.css
@@ -3,6 +3,7 @@ body {
 	color: #FFFFFF;
 	font-family: sans-serif;
   background: #7F140F url("../images/cerveja.jpg") top center no-repeat;
+  background-size: cover;
 }
 
 @font-face { 
